--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Wikiment</string>
+    <string name="search_hint">Search Wiki</string>
+    <string name="transition_string">transition</string>
 </resources>
